--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	var eq_check = new Test("Equality check no. 1");
 
 	// the test
-	eq_check.test(Test.value.eq);
+	eq_check.set_test(Test.value.eq);
 
 	// the test cases
 	eq_check.expect(true).on(1, 1); 
