--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
 <html>
 	<body></body>
 	<script type="text/javascript" src="Test.js"></script>
-	<script type="text/javascript">
-
-	Test.settings.show_fail_information = false;
-	
-	var eq_check = new Test("Equality check no. 1");
-
-	// the test
-	eq_check.set_test(Test.value.eq);
-
-	// the test cases
-	eq_check.expect(true).on(1, 1); 
-	eq_check.expect(false).on(1, "1");
-
-	// run the tests
-	eq_check.run();
-
-
-	// var lt_check = Test.run("Less-than check no. 1", Test.value.lt, [
-	var lt_check = Test.run("Less-than check no. 1", function (a) {
-		return Math.random() < a;
-	}, [
-	    [true, [.5]]
-	], 50);
-
-	Test.display.output();
-	Test.display.summary();
-
-	</script>
+	<script type="text/javascript" src="Test.ui.js"></script>
+	<script type="text/javascript" src="tests.js"></script>
 </html>
