--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 	<body></body>
 	<script type="text/javascript" src="Test.js"></script>
 	<script type="text/javascript" src="Test.ui.js"></script>
+	<script type="text/javascript" src="Test.dom.js"></script>
 	<script type="text/javascript" src="tests.js"></script>
 </html>
